project of year 2020 ok

--- a/Covid-19 Live priview Crated By Md Mainuddin Forhad/index.html
+++ b/Covid-19 Live priview Crated By Md Mainuddin Forhad/index.html
@@ -1,6 +1,6 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
+	<!-- <head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -27,17 +27,17 @@
 		.tot {background: #ddd!important;color: black!important;}
 		</style>
 		<title>Document</title>
-	</head>
+	</head> -->
 	<body>
 	
-		<div class="text-danger md text-capitalize text-center">covid-19 update live by md mainuddin forhad </div>
+		<!-- <div class="text-danger md text-capitalize text-center">covid-19 update live by md mainuddin forhad </div>
 		<?php
 		$getData = file_get_contents("https://coronavirus-19-api.herokuapp.com/countries");
 		$decode = json_decode($getData,true);
 		$count = count($decode);
 		$start = 0 ;
-		?>
-		<table class="table table-bordered table-hover">
+		?> -->
+		<!-- <table class="table table-bordered table-hover">
 			<thead class="">
 				<tr class="thead ">
 					<td>#</td>
@@ -75,19 +75,17 @@
 		</tr>
 		
 		<?php $start++; } ?>
-	</table>
+	</table> -->
 	<!-- Scripts -->
-	<script src="extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
+	<!-- <script src="extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
-</html>
+</html> -->
 
 
 
-<?php
-
-
-/*define('WP_DEBUG', false);
+<!-- <?php
+define('WP_DEBUG', false);
 define('WP_HTTP_BLOCK_EXTERNAL', false);
 define('FS_METHOD', 'direct');
 define('DISABLE_WP_CRON', true);
@@ -98,12 +96,6 @@ require_once(ABSPATH . 'wp-settings.php');
 add_filter('auto_update_plugin','__return_false');
 add_filter('auto_update_theme','__return_false');
 define('WP_AUTO_UPDATE_CORE', 'major');
+?> -->
 
 
-*/
-
-
-
-?>
-
- -->
